# Infrastructure.Dapper/Services/swagger.json
@@ -78,7 +78,7 @@
         }
       }
     },
-    "/api/Synchronisation/NonSyncedEvents/{lastSyncedId}": {
+    "/api/Synchronisation/NonSyncedEvents/{lastSyncedId}/{userId}": {
       "get": {
         "tags": [
           "Synchronisation"
@@ -86,6 +86,15 @@
         "parameters": [
           {
             "name": "lastSyncedId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          },
+          {
+            "name": "userId",
             "in": "path",
             "required": true,
             "schema": {
